--- a/chrono_timer/CMakeLists.txt
+++ b/chrono_timer/CMakeLists.txt
@@ -24,4 +24,5 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O0")
  
 add_executable (no_mem no_mem.cpp)
 add_executable (structured_mem structured_mem.cpp)
+add_executable (unstructured_mem unstructured_mem.cpp)
 
