--- a/vmmul-harness-instructional/CMakeLists.txt
+++ b/vmmul-harness-instructional/CMakeLists.txt
@@ -34,11 +34,10 @@ target_compile_options(benchmark-blas PRIVATE -Wall -pedantic -march=native)
 set(BENCHMARK "blas")
 configure_file(job.in job-${BENCHMARK})
 
-# add_executable(benchmark-openmp dgemv-openmp.cpp)
-# target_link_libraries(benchmark-openmp PRIVATE benchmark ${BLAS_LIBRARIES})
-# target_link_options(benchmark-openmp PRIVATE -fopenmp)
-# target_compile_features(benchmark-openmp PRIVATE c_std_11 c_restrict)
-# target_compile_options(benchmark-openmp PRIVATE -fopenmp -Wall -pedantic -march=native)
-# set(BENCHMARK "openmp")
-# configure_file(job.in job-${BENCHMARK})
-
+add_executable(benchmark-openmp dgemv-openmp.cpp)
+target_link_libraries(benchmark-openmp PRIVATE benchmark ${BLAS_LIBRARIES})
+target_link_options(benchmark-openmp PRIVATE -fopenmp)
+target_compile_features(benchmark-openmp PRIVATE c_std_11 c_restrict)
+target_compile_options(benchmark-openmp PRIVATE -fopenmp -Wall -pedantic -march=native)
+set(BENCHMARK "openmp")
+configure_file(job.in job-${BENCHMARK})
