--- a/HW5/CMakeLists.txt
+++ b/HW5/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
-project(sobel_harness LANGUAGES CXX)
+project(sobel_harness LANGUAGES CXX CUDA)
 
 # set(CMAKE_C_COMPILER )
 # set(CMAKE_CXX_COMPILER "$HOME/.local/bin/clang++")
@@ -13,6 +13,6 @@ add_executable(sobel_cpu_omp_offload sobel_cpu_omp_offload.cpp)
 target_compile_options(sobel_cpu_omp_offload PRIVATE -Ofast -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda)
 target_link_options(sobel_cpu_omp_offload PRIVATE -Ofast -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda )
 
-# add_executable(sobel_gpu sobel_gpu.cu)
-# # generate CUDA code for an actual compute capability 7.0 device (Volta)
-# set_property(TARGET sobel_gpu PROPERTY CUDA_ARCHITECTURES 70-real) 
+add_executable(sobel_gpu sobel_gpu.cu)
+# generate CUDA code for an actual compute capability 7.0 device (Volta)
+set_property(TARGET sobel_gpu PROPERTY CUDA_ARCHITECTURES 61-real 70-real) 
