--- a/tsunami/CMakeLists.txt
+++ b/tsunami/CMakeLists.txt
@@ -2,11 +2,30 @@ cmake_minimum_required(VERSION 3.10)
 project(tsunami)
 
 set(CMAKE_C_STANDARD 99)
-
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(tsunami tsunami.c memory.c timer.c file_ops.c)
+cmake_policy(SET CMP0060 NEW) ## use full path so it doesn't pick up hdf5 in /usr/lib
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O3")
+
+# Find Packages
+find_package(MPI REQUIRED)
+set(HDF5_PREFER_PARALLEL true)
+find_package(HDF5 1.10.1 REQUIRED)
+
+if (NOT HDF5_IS_PARALLEL)
+    message(FATAL_ERROR " -- HDF5 version is not parallel.")
+endif (NOT HDF5_IS_PARALLEL)
+
+add_executable(tsunami tsunami.c memory.c timer.c file_ops.c hdf5_file_ops.c)
+set(IncludeDirs "${MPI_C_INCLUDE_PATH};${HDF5_C_INCLUDE_DIRS}")
+set_target_properties(tsunami PROPERTIES INCLUDE_DIRECTORIES
+"${IncludeDirs}")
+set_target_properties(tsunami PROPERTIES COMPILE_FLAGS
+"${MPI_C_COMPILE_FLAGS}")
+set_target_properties(tsunami PROPERTIES LINK_FLAGS
+"${MPI_C_LINK_FLAGS}")
+target_link_libraries(tsunami ${HDF5_C_LIBRARIES})
+target_link_libraries(tsunami ${MPI_C_LIBRARIES})
 target_link_libraries(tsunami -lm)
 
 add_custom_command(
